# cffi_embedded_python_example

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
python_module/: py_swe_plugin_header.h  py_swe_plugin_module.py
src/: CMakeLists.txt  fortran_functions.f90  fortran_program.f90  fortran_types.f90
